# atvitsc-encrypted-traffic-classification

./: .gitignore  README.md  arch.py  main.ipynb  main.py  pyproject.toml  session_image_dataset.py
report/: report.md
runs/: benign_malware.ipynb  benign_multiclass.ipynb
src/: arch.py
