[project]
name = "atvitsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "scapy>=2.7.0",
  "scikit-learn>=1.8.0",
  "torch>=2.10.0",
  "torchinfo>=1.8.0",
  "torchvision>=0.25.0",
  "tqdm>=4.67.3",
  "vit-pytorch>=1.18.0",
]



[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

